<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="648dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lblTituloManilla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/tituloArreglaManilla" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/lblMaterial"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/material" />

            <Spinner
                android:id="@+id/spinnerMaterial"
                android:layout_width="140dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/lblDije"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/dije" />

            <Spinner
                android:id="@+id/spinnerDije"
                android:layout_width="140dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/lblTipo"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/tipo" />

            <Spinner
                android:id="@+id/spinnerTipo"
                android:layout_width="140dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/lblMoneda"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/moneda" />

            <Spinner
                android:id="@+id/spinnerMoneda"
                android:layout_width="140dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/lblTituloValorUnidad"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/valorUnidad" />

            <TextView
                android:id="@+id/lblValorUnidad"
                android:layout_width="140dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/lblCantidad"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/cantidad" />

            <EditText
                android:id="@+id/txtCantidad"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btnCalcular"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calcular"
                android:text="@string/calcular" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/lblTituloValorPagar"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:text="@string/pagoTotal" />

            <TextView
                android:id="@+id/lblvalorPagar"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/lblMonedaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="dolares" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>